examples/test/testpolicy2834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2834
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key10: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value16
          key35: value12
      podSelector:
        matchLabels:
          key40: value24
          key18: value38
